fix(Modal): fix pending spinner vertical alignment

--- a/src/components/Modal/Modal.css
+++ b/src/components/Modal/Modal.css
@@ -165,3 +165,7 @@
     }
   }
 }
+
+.spinner {
+  vertical-align: inherit;
+}
